--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": "^16.3.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
